# Kalman-Filter-Scratch

./: LICENSE  README.md  qt.xml
1D/: CMakeLists.txt
1D/include/: filter.h
1D/src/: filter.cpp  main.cpp
C++/: CMakeLists.txt
C++/include/: filter.h  helper.h
C++/src/: filter.cpp  helper.cpp  main.cpp
RobotEKF/: README.md
SimpleKF/: .gitignore  CMakeLists.txt  README.md
SimpleKF/configFiles/: constAcc.toml
SimpleKF/include/: helper.h
SimpleKF/src/: main.cpp
